// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> CSS 1`] = `
.c0 {
  min-width: 270px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 h1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-bottom: 60px;
}

.c0 .Checkbox__StyledComponent-bGxCTx {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<Login
  className="c0"
  isLogging={false}
  onSubmit={[Function]}
/>
`;

exports[`<Login /> HTML 1`] = `
<div
  className="test"
  data-automation-id="LoginForm"
>
  <Header__StyledComponent>
    Log In
  </Header__StyledComponent>
  <Form
    onSubmit={[Function]}
    validateError={[Function]}
  />
</div>
`;

exports[`errorValidator all valid 1`] = `
Object {
  "email": false,
  "password": false,
}
`;

exports[`errorValidator email empty 1`] = `
Object {
  "email": "Field is required",
  "password": false,
}
`;

exports[`errorValidator email invalid format 1`] = `
Object {
  "email": "Email has invalid format",
  "password": false,
}
`;

exports[`errorValidator password empty 1`] = `
Object {
  "email": false,
  "password": "Field is required",
}
`;

exports[`errorValidator password lack of lowercase 1`] = `
Object {
  "email": false,
  "password": "Provide lowercase character",
}
`;

exports[`errorValidator password lack of number 1`] = `
Object {
  "email": false,
  "password": "Provide number character",
}
`;

exports[`errorValidator password lack of uppercase 1`] = `
Object {
  "email": false,
  "password": "Provide uppercase character",
}
`;
